--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gulp-fonter": "^0.3.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
@@ -30,6 +32,8 @@
     "gulp-sass": "^5.1.0",
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-webp": "^4.0.1",
+    "gulp-webp-html-nosvg": "^1.1.1",
     "sass": "^1.56.2"
   },
   "dependencies": {
